2010-12-22 Pierre Wieser <pwieser@trychlos.org>

	* Makefile.am: Enable '-Wl,--as-needed' link option at make distcheck.

	* configure.ac:
	* m4/na-compiler-flags.m4: Define --enable-as-needed configure option.

	* src/core/Makefile.am: Build core library against its dependancies.
	Fix #637797 - -Wl,--as-needed bug.

	* run-autogen.sh: No more enable silent rules in development.

	* tools/release-tarball.sh: Fix remote install of the tarball.

2010-12-20 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Post-release bump version.

	* NEWS: Update before release.

	* README: Add some words about importer/exporter plugins.

	* m4/na-check-for-gtk.m4: New file.

	* configure.ac: Add check for building against Gtk+ 3.0.

	* m4/na-check-module.m4:
	* m4/na-nautilus-extdir.m4:
	* run-autogen.sh: Updated accordingly.

	* src/nact/base-keysyms.h: New file which holds defines for Gdk keys.

	* src/nact/Makefile.am:
	* src/nact/base-assistant.c (on_key_pressed_event):
	* src/nact/nact-iactions-list.c (on_key_pressed_event):
	* src/nact/nact-match-list.c (on_key_pressed_event):
	* src/nact/nact-schemes-list.c (on_key_pressed_event):
	Updated accordingly.

	* src/nact/nact-iaction-tab.c
	(nact_iaction_tab_initial_load_toplevel):
	Fix arguments when building against Gtk+ 2.0.

	* src/nact/nact-icommand-tab.c (update_example_label):
	Replace 'e.g.,' with 'Ex.:'.

	* src/nact/nautilus-actions-config-tool.ui: Review the widget layout.

2010-12-16 Pierre Wieser <pwieser@trychlos.org>

	* m4/na-check-module.m4: Fix variable substitution.

	* run-autogen.sh: Re-enable silent rules in Gtk+-3 build.

	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h (nact_gtk_utils_set_editable):
	* src/nact/nact-iaction-tab.c (on_tab_updatable_selection_changed):
	* src/nact/nact-ibasenames-tab.c (on_tab_updatable_selection_changed):
	* src/nact/nact-icommand-tab.c (on_tab_updatable_selection_changed):
	* src/nact/nact-ienvironment-tab.c (on_tab_updatable_selection_changed):