@@ -44,9 +44,17 @@ DOC_MAIN_SGML_FILE = $(DOC_MODULE)-docs.xml
 # that is, only consider in src/core .c sources whose header is in src/api
 core_headers = $(patsubst $(top_srcdir)/src/core/%,%,$(shell \ls -1 $(top_srcdir)/src/core/*.h))
 
-written_xmls_regexp = $(shell echo "$(DOC_MAIN_SGML_FILE) $(content_files)" | $(SED) 's/[[:space:]]\+/|/g')
+#written_xmls_regexp = $(shell echo "$(DOC_MAIN_SGML_FILE) $(content_files)" | $(SED) 's/[[:space:]]\+/|/g')
+#written_xmls_regexp = $(shell echo "$(DOC_MAIN_SGML_FILE) $(auto_created_files)" | $(SED) 's/[[:space:]]\+/|/g')
+#written_xmls = $(shell \ls -1 *.xml | $(EGREP) -v "$(written_xmls_regexp)")
 
-written_xmls = $(shell \ls -1 *.xml | $(EGREP) -v "$(written_xmls_regexp)")
+# content_files must include auto created ones because content_files is
+# a prerequisite of sgml-build-stamp target; we so are sure that these
+# files are actually generated (version_dir.xml)
+# as a consequence, auto created files are automatically included in the
+# tarball
+content_files = $(shell \ls -1 *.xml)
+content_files += $(auto_created_files)
 
 # Extra options to supply to gtkdoc-scan
 #	--ignore-headers="config.h devkit-disks-daemon-glue.h"
@@ -107,7 +115,7 @@ MKTMPL_OPTIONS = \
 # Non-autogenerated SGML files to be included in $(DOC_MAIN_SGML_FILE)
 # nb: unable to subst/strip/sed a last $(null) terminating character!
 #     so keep it out of there
-content_files = \
+auto_created_files = \
 	$(xml_files)								\
 	version_dir.xml
 
@@ -137,17 +145,13 @@ CLEANFILES += \
 	version_dir.xml								\
 	$(NULL)
 
-# Version information for marking the documentation
-EXTRA_DIST += \
-	$(xml_in_files)								\
-	$(written_xmls)								\
-	$(NULL)
-
 install-data-local: install-data-local-hook
 
 install-data-local-hook:
 	echo "core_headers=$(core_headers)"
-	echo "written_xmls_regexp=$(written_xmls_regexp)"
-	echo "written_xmls=$(written_xmls)"
+	echo "content_files=$(content_files)"
+
+#echo "written_xmls_regexp=$(written_xmls_regexp)"
+#echo "written_xmls=$(written_xmls)"
 
 #TESTS = $(GTKDOC_CHECK)
